--- a/src/lab/exp1/Manual.html
+++ b/src/lab/exp1/Manual.html
@@ -143,7 +143,18 @@
                         <h1 class="text-h1-lightblue">Bernoulli's Experiment</h1>
                         <div class="content" id="experiment-article-section-5-content">
                             <p>
-                                <img alt="" height="325" src="Observation_Table.JPG" width="550"/>
+                               <!--<img alt="" height="325" src="Observation_Table.JPG" width="550"/>-->
+                                OBSERVATIONS:
+
+                                Constants
+
+                                Measuring tank size, a m The height (.) for which the time t,
+                                and are noted to collect water in the measuring tank • The areas of cross section A A,
+                                etc Variables
+
+                                The piezometer readings Her Hoz etc in mn of water •
+                                Timer seconds required to collect water for a height of in the measuring
+                                 tank as mean value of readings t and G
                                 <br/>
                                 <br/>
                                 <a href="1.Bernoullis_experiment.pdf">Read More</a>
